# agentic-sales-intelligence

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/agents/: __init__.py  analytics_agent.py  debug.py  metadata_agent.py  orchestrator.py  structured_query_agent.py  summarization_agent.py
storage/: duckdb_manager.py  vector_store.py
